--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -7,6 +7,10 @@
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 45px;
-  margin-top: 50px;
+  margin-top: 100px 50px;
   padding: 50px;
+}
+
+.cart-container {
+  background: #ffe0b3;
 }
