--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -8,7 +8,7 @@
 }
 .product:hover {
   border: 2px solid #55d9fd;
-  box-shadow: 8px 8px 0px #8f8e8d;
+  box-shadow: 8px 8px 0px #dcd9d7;
 }
 .product img {
   width: 286px;
